Great tip read about avoiding blurry text

--- a/www/css/style-chromeapp.css
+++ b/www/css/style-chromeapp.css
@@ -65,3 +65,8 @@ text-align:right;filter:alpha(opacity=0);opacity:0;outline:0;background:#fff;cur
 .tab-pane {
   margin-top:0.5em;
 }
+# Fix to avoid blurry text
+* {
+text-shadow:0 0 0 transparent;
+text-shadow:none;
+}
